[package]
name = "ParentoExplo"
version = "0.1.0"
edition = "2024"

[dependencies]
plotters = {version = "0.3",  default-features = false,features=["ttf","bitmap_encoder","bitmap_backend"]}

mimalloc = { version = "*", features = ["v3"] }
rand = "0.9"

[profile.release]
lto = true
codegen-units = 1
strip=true
panic = 'abort'

[profile.perf-debug]
inherits = "release"
debug = true
lto = true
strip=false
panic = 'abort'
